fix dark mode

--- a/resources/problem.scss
+++ b/resources/problem.scss
@@ -353,7 +353,7 @@ ul.problem-list {
 
     .select2-results__option {
         color: $color_problem_submit_select2 !important;
-        background: $color_primary0 !important;
+        background: $color_primary36 !important;
     }
 
     .select2-results__option--highlighted {
