--- a/resources/select2-dmoj.scss
+++ b/resources/select2-dmoj.scss
@@ -3,7 +3,7 @@
 
 /* Hack to make dropdown background follow theming */
 .select2-dropdown {
-    background-color: $color_primary0 !important;
+    background-color: $color_primary36 !important;
     border: 1px solid $color_primary33 !important;
     color: $color_primary100 !important;
 }
