--- a/resources/select2/_multiple.scss
+++ b/resources/select2/_multiple.scss
@@ -2,7 +2,7 @@
 
 @mixin multiple {
     .select2-selection--multiple {
-        background-color: $color_primary0;
+        background-color: $color_primary36;
         border: 1px solid $color_primary33;
         border-radius: 4px;
         cursor: text;
