--- a/resources/select2/_single.scss
+++ b/resources/select2/_single.scss
@@ -2,7 +2,7 @@
 
 @mixin single {
     .select2-selection--single {
-        background-color: $color_primary0;
+        background-color: $color_primary36;
         border: 1px solid $color_primary33;
         border-radius: 4px;
 
